--- a/Lista4/package.json
+++ b/Lista4/package.json
@@ -2,5 +2,8 @@
   "name": "mdb-standard-app",
   "version": "6.2.0",
   "homepage": "https://mdbootstrap.com/docs/standard/",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^5.2.3"
+  }
 }
