--- a/Lista6/books_reading_vue_app/package.json
+++ b/Lista6/books_reading_vue_app/package.json
@@ -13,7 +13,9 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuejs-paginate": "^2.1.0",
+    "vuejs-pagination": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
