--- a/Lista6/books_reading_vue_app/package.json
+++ b/Lista6/books_reading_vue_app/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
