--- a/Lista6/books_reading_vue_app/package.json
+++ b/Lista6/books_reading_vue_app/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.47",
+    "vue-mdbootstrap": "^1.2.1",
     "vue-router": "^4.1.6",
     "vuejs-paginate": "^2.1.0",
     "vuejs-pagination": "^1.1.2"
@@ -23,7 +24,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
     "root": true,
