--- a/Lista7/graphql_app/package.json
+++ b/Lista7/graphql_app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "graphql_app",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "start": " nodemon -e js,graphql src/App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.17",
+    "axios": "^1.3.5",
+    "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
-    "nodemon": "^2.0.22"
+    "mongoose": "^7.0.3",
+    "nodemon": "2.0.22"
   }
 }
