--- a/Lista7/graphql_app/package.json
+++ b/Lista7/graphql_app/package.json
@@ -2,7 +2,6 @@
   "name": "graphql_app",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "App.js",
   "scripts": {
     "start": " nodemon -e js,graphql src/App.js",
@@ -13,9 +12,14 @@
   "dependencies": {
     "@graphql-tools/schema": "^9.0.17",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
+    "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "nodemon": "2.0.22"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
