--- a/PROJEKCIK/backend/CinemaReservations/pom.xml
+++ b/PROJEKCIK/backend/CinemaReservations/pom.xml
@@ -51,6 +51,18 @@
 			<version>4.20.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client</artifactId>
+			<version>1.34.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
