sso na backendzie dziala

--- a/PROJEKCIK/backend/CinemaReservations/src/main/resources/application.properties
+++ b/PROJEKCIK/backend/CinemaReservations/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.liquibase.enabled=true
 
 spring.application.name = liquibase demo
 spring.liquibase.change-log=classpath:db/changelog/changes/migration.yml
+
+spring.security.oauth2.client.registration.google.client-id=188786724390-1sl15llbffbfkpb80ha1q54jjhppro2j.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
