--- a/PROJEKCIK/backend/CinemaReservations/pom.xml
+++ b/PROJEKCIK/backend/CinemaReservations/pom.xml
@@ -51,6 +51,10 @@
 			<version>4.20.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
