--- a/PROJEKCIK/backend/CinemaReservations/src/main/resources/application.properties
+++ b/PROJEKCIK/backend/CinemaReservations/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-0BHwfuuBX
 spring.security.oauth2.client.registration.google.=
 logging.level.org.springframework.security=DEBUG
 
+security.oauth2.resource.jwk.key-set-uri=https://www.googleapis.com/oauth2/v3/certs
+
 spring.main.allow-circular-references=true
